--- a/AdminSite/Pages/Index.cshtml
+++ b/AdminSite/Pages/Index.cshtml
@@ -9,7 +9,11 @@
 </div>
 <hr />
 
-<div class="maintenance">
-    <a>Test</a>
+<div class="maintenanceBox">
+    <a class="bigtext">Næste vedligeholdelse</a>
+    <hr class="maintenanceHR" />
+    <a>3 November 2023</a>
+    <br />
+    <a>Klokken 06:00 - 12:30</a>
 </div>
 
