--- a/AdminSite/Pages/Shared/_Layout.cshtml
+++ b/AdminSite/Pages/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="~/css/nav.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="icon" type="image/png" href="~/images/dashboard .css" sizes="336x336" asp-append-version="true">
+    <link rel="icon" type="image/png" href="~/images/dashboard .css" sizes="336x336">
 </head>
 <body>
     <header>
