--- a/AdminSite/Pages/Index.cshtml
+++ b/AdminSite/Pages/Index.cshtml
@@ -9,11 +9,34 @@
 </div>
 <hr />
 
-<div class="maintenanceBox">
-    <a class="bigtext">Næste vedligeholdelse</a>
-    <hr class="maintenanceHR" />
-    <a>3 November 2023</a>
-    <br />
-    <a>Klokken 06:00 - 12:30</a>
+<div class="mainContainer">
+    @* Maintenance Box in the left side *@
+    <div class="maintenanceBox">
+        <a class="maintenanceBigtext">Næste vedligeholdelse</a>
+        <hr class="maintenanceHR" />
+        <a class="maintenanceDate">3 November 2023</a>
+        <br />
+        <a class="maintenanceClock">Klokken 06:00 - 12:30</a>
+    </div>
+
+    @* News Box in the middle *@
+    <div class="newsBox">
+        <a class="newsBigtext">Nyhedsboks</a>
+        <hr class="newsHR" />
+    </div>
+
+    @* Open or Closed Box in the right side *@
+    <div class="openTime">
+        <a class="openBigtext">Åbningstider</a>
+        <hr class="openHR" />
+        <p class="openingTime">Mandag     09:00 - 21:00<br />
+            Tirsdag     09:00 - 21:00<br />
+            Onsdag      09:00 - 21:00<br />
+            Torsdag     09:00 - 21:00<br />
+            Fredag      09:00 - 22:00<br />
+            Lørdag      08:00 - 23:00<br />
+            Søndag      10:30 - 20:00
+        </p>
+    </div>
 </div>
 
