--- a/AdminSite/Pages/Shared/_Layout.cshtml
+++ b/AdminSite/Pages/Shared/_Layout.cshtml
@@ -12,14 +12,14 @@
     <header>
         <div class="navbar">
             <ul>
-                <li><a href="#hjem">Hjem</a></li>
-                <li><a href="#om-sffp">Om SFFP</a></li>
+                <li><a asp-page="/Index">Hjem</a></li>
+                <li><a asp-page="/AboutUs">Om SFFP</a></li>
                 <li class="dropdown">
                     <a href="javascript:void(0)" class="dropbtn">Information</a>
                     <div class="dropdown-content">
-                        <a href="#forlystelser">Forlystelser</a>
-                        <a href="#køb-billetter">Køb billetter</a>
-                        <a href="#billeder">Billeder</a>
+                        <a asp-page="/Forlystelser">Forlystelser</a>
+                        <a asp-page="/Køb-Billetter">Køb billetter</a>
+                        <a asp-page="/Billeder">Billeder</a>
                     </div>
                 </li>
 @*                 <li class="dropdown">
