--- a/AdminSite/wwwroot/css/nav.css
+++ b/AdminSite/wwwroot/css/nav.css
@@ -18,16 +18,18 @@ li {
     float: left;
 }
 
-    li a, .dropbtn .dropbtn-language {
+    li a, .dropbtn {
         display: inline-block;
         color: white;
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
+
     }
 
-        li a:hover, .dropdown:hover .dropbtn .dropbtn-language {
+        li a:hover, .dropdown:hover .dropbtn {
             background-color: royalblue;
+            border: 1px solid black;
         }
 
     li.dropdown {
@@ -53,35 +55,9 @@ li {
     }
 
         .dropdown-content a:hover {
-            background-color: darkgrey;
+            background-color: royalblue;
         }
 
 .dropdown:hover .dropdown-content {
-    display: block;
-}
-
-/* Dropdown css to change language */
-.dropdown-language {
-    display: none;
-    position: absolute;
-    background-color: darkgrey;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-    .dropdown-language a {
-        color: white;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-        text-align: left;
-    }
-
-        .dropdown-language a:hover {
-            background-color: darkgrey;
-        }
-
-.dropdown:hover .dropdown-language {
     display: block;
 }
