--- a/AdminSite/Pages/AboutUs.cshtml
+++ b/AdminSite/Pages/AboutUs.cshtml
@@ -1,10 +1,8 @@
 ﻿@page
-@model IndexModel
+@model AdminSite.Pages.AboutUsModel
 @{
-    ViewData["TitleAbout"] = "Om - SFFP";
+    ViewData["Title"] = "Om Os - SFFP";
 }
-
-
 
 <div class="header">
     <h1>Om Super Fun Fun Park</h1>
@@ -14,7 +12,7 @@
 <div class="mainContainer">
     @* Maintenance Box in the left side *@
     <div class="leftBox">
-        <a class="leftBoxBigtext">Næste vedligeholdelse</a>
+        <a class="leftBoxBigtext">Overskrift</a>
         <hr class="leftBoxHR" />
         <p class="leftBoxText">
             Text here
@@ -22,7 +20,7 @@
     </div>
 
     @* News Box in the middle *@
-    <div class="middleBox">
+     <div class="middleBox">
         <a class="middleBoxBigtext">Overskrift</a>
         <hr class="middleBoxHR" />
         <p class="middleBoxText">
