--- a/AdminSite/Pages/Index.cshtml
+++ b/AdminSite/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Admin Overview";
+    ViewData["Title"] = "Hjem - SFFP";
 }
 
 <div class="header">
@@ -40,9 +40,9 @@
     </div>
 </div>
 
-<br />
+@* <br />
 <hr />
 <div class="footer">
 
-</div>
+</div> *@
 
