--- a/AdminSite/Pages/Shared/_Layout.cshtml
+++ b/AdminSite/Pages/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/css/nav.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/aboutus.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/footer.css" asp-append-version="true" />
     <link rel="icon" type="image/x-icon" href="~/favicon.ico">
 </head>
 <body>
@@ -23,6 +24,13 @@
                         <a asp-page="/Billeder">Billeder</a>
                     </div>
                 </li>
+                <li class="language">
+                    <a href="javascript:void(0)" class="dropbtn-language">Sprog</a>
+                    <div class="language-content">
+                        <a href="#Dansk">Dansk</a>
+                        <a href="#Engelsk">Engelsk</a>
+                    </div>
+                </li>
             </ul>
         </div>
     </header>
@@ -32,6 +40,14 @@
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
+    </div>
+    <br />
+    <br />
+    <br />
+
+    <div class="footer">
+        <hr class="hrF"/>
+        <p>&copy; 2023 Super Fun Fun Park. Alle rettigheder forbeholdes.</p>
     </div>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
