--- a/AdminSite/wwwroot/css/nav.css
+++ b/AdminSite/wwwroot/css/nav.css
@@ -18,14 +18,14 @@ li {
     float: left;
 }
 
-    li a, .dropbtn {
-        display: inline-block;
-        color: white;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
 
-    }
+li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
 
         li a:hover, .dropdown:hover .dropbtn {
             background-color: royalblue;
@@ -59,5 +59,52 @@ li {
         }
 
 .dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Dropdown css for the language section */
+.language {
+    float: right;
+}
+
+li a, .dropbtn-language {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+    li a:hover, .language:hover .dropbtn-language {
+        background-color: royalblue;
+        border: 1px solid black;
+    }
+
+li.language {
+    display: inline-block;
+}
+
+.language-content {
+    display: none;
+    position: absolute;
+    background-color: darkgrey;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+    .language-content a {
+        color: white;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        text-align: left;
+    }
+
+        .language-content a:hover {
+            background-color: royalblue;
+        }
+
+.language:hover .language-content {
     display: block;
 }
