--- a/AdminSite/Pages/Forlystelser.cshtml
+++ b/AdminSite/Pages/Forlystelser.cshtml
@@ -1,4 +1,10 @@
 ﻿@page
 @model AdminSite.Pages.ForlystelserModel
 @{
+    ViewData["Title"] = "Forlystelser - SFFP";
 }
+
+<div class="header">
+    <h1>Vores Forlystelser</h1>
+</div>
+<hr />
