--- a/AdminSite/Pages/Køb-Billetter.cshtml
+++ b/AdminSite/Pages/Køb-Billetter.cshtml
@@ -1,4 +1,10 @@
 ﻿@page
 @model AdminSite.Pages.Køb_BilletterModel
 @{
+    ViewData["Title"] = "Køb Billetter - SFFP";
 }
+
+<div class="header">
+    <h1>Køb Billetter</h1>
+</div>
+<hr />
