--- a/AdminSite/Pages/Index.cshtml
+++ b/AdminSite/Pages/Index.cshtml
@@ -4,8 +4,17 @@
     ViewData["Title"] = "Hjem - SFFP";
 }
 
+
 <div class="header">
     <h1>Super Fun Fun Park</h1>
+    <div id="curr_date">
+        <script>
+            const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+            const formattedDate = new Date().toLocaleDateString('da-DK', options);
+            const correctedDate = formattedDate.replace(/\b\w/g, (c) => c.toUpperCase()); // Ændrer første bogstav i hver dag til stort bogstav
+            document.getElementById("curr_date").innerHTML = correctedDate;
+        </script>
+    </div>
 </div>
 <hr />
 
