--- a/AdminSite/wwwroot/css/site.css
+++ b/AdminSite/wwwroot/css/site.css
@@ -122,3 +122,8 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+
+#curr_date {
+    text-align: right;
+    font-size: 23px;
+}
