--- a/AdminSite/Pages/AboutUs.cshtml
+++ b/AdminSite/Pages/AboutUs.cshtml
@@ -12,38 +12,33 @@
 <div class="mainContainer">
     @* Maintenance Box in the left side *@
     <div class="leftBox">
-        <a class="leftBoxBigtext">Overskrift</a>
+        <a class="leftBoxBigtext">Velkommen</a>
         <hr class="leftBoxHR" />
         <p class="leftBoxText">
-            Text here
+            Velkommen til SuperFunFunPark, hvor endeløs sjov og spænding venter på dig!<br />
+            Udforsk vores spændende attraktioner og oplev eventyrglæden med dine venner og familie.<br />
+            Vores topmoderne faciliteter garanterer en uforglemmelig dag fyldt med grin og glæde.
         </p>
     </div>
 
     @* News Box in the middle *@
      <div class="middleBox">
-        <a class="middleBoxBigtext">Overskrift</a>
+        <a class="middleBoxBigtext">Sikkerhed</a>
         <hr class="middleBoxHR" />
         <p class="middleBoxText">
-            Text here
+            Hos SuperFunFunPark sætter vi en ære i at tilbyde et sikkert og behageligt miljø for besøgende i alle aldre.<br />
+            Fra de hjertebankende forlystelser som "Go Go Rollercoaster" og "Deep Deep Fall Drop Tower" til den afslappende atmosfære i "Super Swimming Pool" og "Ultimate Restrooms", er der noget for enhver smag.
         </p>
     </div>
 
     @* Open or Closed Box in the right side *@
     <div class="rightBox">
-        <a class="rightBoxBigtext">Overskrift</a>
+        <a class="rightBoxBigtext">HYG DIG!</a>
         <hr class="rightBoxHR" />
         <p class="rightBoxText">
-            Text here
+            Kom og vær med til en actionfyldt dag, hvor det sjove aldrig ender, og minderne skabes.<br />
+            Lad os skabe uforglemmelige øjeblikke sammen på SuperFunFunPark!
         </p>
     </div>
-</div>
-
-<div id="curr_date">
-    <script>
-        const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
-        const formattedDate = new Date().toLocaleDateString('da-DK', options);
-        const correctedDate = formattedDate.replace(/\b\w/g, (c) => c.toUpperCase()); // Ændrer første bogstav i hver dag til stort bogstav
-        document.getElementById("curr_date").innerHTML = correctedDate;
-    </script>
 </div>
 
