--- a/AdminSite/Pages/Køb-Billetter.cshtml
+++ b/AdminSite/Pages/Køb-Billetter.cshtml
@@ -21,7 +21,7 @@
             * Børn 3 - 7 år, fra 70 DKK<br />
             * Børn under 3 år, har gratis Entré
         </p>
-        <a href="#" class="dailyPassButton">
+        <a href="#DailyPass" class="dailyPassButton">
             <span>Køb nu</span>
         </a>
     </div>
