--- a/AdminSite/wwwroot/css/site.css
+++ b/AdminSite/wwwroot/css/site.css
@@ -88,10 +88,9 @@ hr {
 }
 
 /* Open or Closed */
-
 .openTime {
     flex: 1;
-    height: 250px;
+    height: 270px;
     width: 300px;
     margin: 10px;
     border-radius: 10px;
@@ -123,7 +122,9 @@ body {
     background-attachment: fixed;
 }
 
+/* Shows the current date in openTimeBox */
 #curr_date {
-    text-align: right;
-    font-size: 23px;
+    margin-top: 10px;
+    text-align: center;
+    font-size: 18px;
 }
