--- a/AdminSite/Pages/Forlystelser.cshtml
+++ b/AdminSite/Pages/Forlystelser.cshtml
@@ -8,3 +8,37 @@
     <h1>Vores Forlystelser</h1>
 </div>
 <hr />
+
+<div class="mainContainerForlystelser">
+    @* Go Go Rollercoaster *@
+    <div class="goGoRollercoaster">
+        <a class="bigtext">Go Go Rollercoaster</a>
+        <p>En sjov rutsjebane, for dem der godt kan lide fart!</p>
+        <hr class="forlystelsesHR" />
+        <img src="/images/GoGoRollercoaster.jpg" alt="Paris" width="400" height="400">
+    </div>
+
+    @* Deep Deep Fall Drop Tower *@
+    <div class="deepDeepFallDropTower">
+        <a class="bigtext">Deep Deep Fall Drop Tower</a>
+        <p>Et sjovt fald for dem der elsker højder.</p>
+        <hr class="forlystelsesHR" />
+        <img src="/images/DeepDeepFallDropTower.jpg" alt="Paris" width="400" height="400">
+    </div>
+
+    @* Super Swimming Pool *@
+    <div class="superSwimmingPool">
+        <a class="bigtext">Super Swimming Pool</a>
+        <p>En dejlig og luksuriøs pool for dem der elsker at svømme.</p>
+        <hr class="forlystelsesHR" />
+        <img src="/images/SuperSwimmingPool.jpg" alt="Paris" width="400" height="400">
+    </div>
+
+    @* Ultimate Restrooms *@
+    <div class="ultimateRestrooms">
+        <a class="bigtext">Ultimate Restrooms</a>
+        <p>Nogle dejlige toiletter som der bliver passet og pleget.</p>
+        <hr class="forlystelsesHR" />
+        <img src="/images/UltimateRestrooms.jpg" alt="Paris" width="400" height="400">
+    </div>
+</div>
