--- a/AdminSite/wwwroot/css/nav.css
+++ b/AdminSite/wwwroot/css/nav.css
@@ -19,13 +19,13 @@ li {
 }
 
 
-li a, .dropbtn {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
+    li a, .dropbtn {
+        display: inline-block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
 
         li a:hover, .dropdown:hover .dropbtn {
             background-color: green;
@@ -59,6 +59,53 @@ li a, .dropbtn {
         }
 
 .dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Dropdown css for the login and register section */
+.login {
+    float: right;
+}
+
+li a, .dropbtn-login {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+    li a:hover, .login:hover .dropbtn-login {
+        background-color: green;
+        border: 1px solid black;
+    }
+
+li.login {
+    display: inline-block;
+}
+
+.login-content {
+    display: none;
+    position: absolute;
+    background-color: grey;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+    .login-content a {
+        color: white;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        text-align: left;
+    }
+
+        .login-content a:hover {
+            background-color: green;
+        }
+
+.login:hover .login-content {
     display: block;
 }
 
