--- a/AdminSite/Pages/Login.cshtml
+++ b/AdminSite/Pages/Login.cshtml
@@ -4,4 +4,16 @@
 	ViewData["Title"] = "Login - SFFP";
 }
 
-<div id="bg"></div>
+<div class="mainContainer">
+	<h1></h1>
+</div>
+<hr />
+
+<div class="login-container">
+    <div class="login-form">
+        <div class="login-title">Login</div>
+        <input class="login-input" type="text" placeholder="Email">
+        <input class="login-input" type="password" placeholder="Password">
+        <button class="login-button">Login</button>
+    </div>
+</div>
