--- a/AdminSite/Pages/Shared/_Layout.cshtml
+++ b/AdminSite/Pages/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="~/css/forlystelser.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/login.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/registrer.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/background.css" asp-append-version="true" />
     <link rel="icon" type="image/x-icon" href="~/favicon.ico">
 </head>
 <body>
