--- a/AdminSite/wwwroot/css/login.css
+++ b/AdminSite/wwwroot/css/login.css
@@ -1,10 +1,52 @@
-﻿#bg {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    display: block;
-    background-image: url('/images/background.png');
-    object-fit: contain;
-    filter: blur(8px);
-    /* -webkit-filter: blur(8px); */
+﻿/* Centering the login form */
+.login-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
 }
+
+/* Login */
+.login-form {
+    height: 300px;
+    width: 300px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+    text-align: center;
+    border: 2px solid black;
+    transition: transform 0.3s, box-shadow 0.3s;
+    background-color: white;
+}
+
+    .login-form:hover {
+        transform: scale(1.05);
+        box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.7);
+    }
+
+/* Additional styling for the login form */
+.login-title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-top: 20px;
+}
+
+.login-input {
+    width: 80%;
+    padding: 10px;
+    margin: 20px auto;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.login-button {
+    background-color: #0074D9;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+    .login-button:hover {
+        background-color: #0056b3;
+    }
