--- a/AdminSite/Pages/Index.cshtml
+++ b/AdminSite/Pages/Index.cshtml
@@ -25,6 +25,15 @@
     <div class="newsBox">
         <a class="newsBigtext">Nyhedsboks</a>
         <hr class="newsHR" />
+        <a>
+            "SuperFunFunPark: Et Nyt Eventyr Begynder! Oplev Spændingen i Danmarks Nyeste Forlystelsespark"<br />
+            <br />
+            Danmark har netop budt velkommen til sit seneste skattekammer af underholdning og spænding med åbningen af SuperFunFunPark. Dette imponerende forlystelsesmekka lover at tage gæster med på en utrolig rejse gennem fantastiske verdener af sjov og eventyr.<br />
+            <br />
+            Med forlystelser for alle aldre, fra adrenalinsusende rutsjebaner til børnevenlige karuseller, er SuperFunFunPark det perfekte sted for familier, venner og eventyrlystne sjæle. Parken byder også på kulinariske oplevelser fra gourmetmadboder til lækre snacks.<br />
+            <br />
+            Så pak din eventyrlyst og smilene ind, og sæt kursen mod SuperFunFunPark, hvor eventyret aldrig stopper, og magien venter rundt om hvert hjørne. Velkommen til et nyt kapitel i forlystelsesverdenen!
+        </a>
     </div>
 
     @* Open or Closed Box in the right side *@
