--- a/AdminSite/Pages/Registrer.cshtml
+++ b/AdminSite/Pages/Registrer.cshtml
@@ -1,10 +1,20 @@
 ﻿@page
-@model AdminSite.Pages.RegistrerModel
+@model AdminSite.Pages.LoginModel
 @{
-	ViewData["Title"] = "Registrer - SFFP";
+    ViewData["Title"] = "Login - SFFP";
 }
 
 <div class="mainContainer">
-	<h1>Opret en din konto</h1>
+    <h1></h1>
 </div>
 <hr />
+
+<div class="registrer-container">
+    <div class="registrer-form">
+        <div class="registrer-title">Registrer</div>
+        <input class="registrer-input" type="text" placeholder="Email">
+        <input class="registrer-input" type="text" placeholder="Fulde navn">
+        <input class="registrer-input" type="password" placeholder="Password">
+        <button class="registrer-button">Registrer</button>
+    </div>
+</div>
