--- a/AdminSite/wwwroot/css/buttons.css
+++ b/AdminSite/wwwroot/css/buttons.css
@@ -77,6 +77,33 @@
         padding: 5px 0;
     }
 
+/* Monthly Pass Button */
+.editPriceButton {
+    display: inline-block;
+    padding: 5px 20px;
+    background-color: #008000; /* Baggrundsfarve */
+    color: #fff; /* Tekstfarve */
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px; /* Afrundede hjørner */
+    border: 2px solid #008000; /* Kantlinje */
+    transition: background-color 0.3s ease, border-color 0.3s ease, transform 0.3s ease;
+}
+
+    .editPriceButton:hover {
+        background-color: #0056b3; /* Ændrer baggrundsfarven ved hover */
+        border-color: #0056b3; /* Ændrer kantlinjefarven ved hover */
+        transform: scale(1.05); /* Ændrer knappens størrelse ved hover */
+    }
+
+    .editPriceButton span {
+        display: block;
+        padding: 5px 0;
+    }
+
+
 
 
 
