--- a/AdminSite/Pages/AdminPanel.cshtml
+++ b/AdminSite/Pages/AdminPanel.cshtml
@@ -13,13 +13,16 @@
     <div class="priceBox">
         <a class="priceBoxBigtext">Pris oversigt</a>
         <hr class="priceBoxHR" />
-        <p>
+        <p class="priceBoxText">
             Dagpas = 175 DKK <br />
             Månedpas = 350 DKK <br />
             Årpas = 1570 DKK 
         </p>
         <a href="#" class="editPriceButton">
             <span>Rediger</span>
+        </a>
+        <a href="#" class="saveButton">
+            <span>Gem</span>
         </a>
     </div>
 
@@ -45,10 +48,47 @@
     <div class="ticketsBox">
         <a class="ticketsBoxBigtext">Billet oversigt</a>
         <hr class="ticketsBoxHR" />
+        <p class="totalTickets">
+            Købte billetter i alt: 9999
+        </p>
+        <p class="lastBoughtTickets">
+            Seneste 5 købte billetter <br />
+            1. Sofia Rodriguez <br />
+            2. Luca Bianchi <br />
+            3. Emily Smith <br />
+            4. Raj Patel <br />
+            5. Aisha Khan <br />
+            6. Pablo Fernandez <br />
+            7. Isabella Santos <br>
+            8. Tuki Tanaka <br />
+            9. Elise Dupont <br />
+            10. Ahmed Ali
+        </p>
     </div>
 
     <div class="workersBox">
         <a class="workersBoxBigtext">Oversigt over ansatte</a>
         <hr class="workersBoxHR" />
+        <p>
+            Sofia Rodriguez <br />
+            Luca Bianchi <br />
+            Emily Smith <br />
+            Raj Patel <br />
+            Aisha Khan <br />
+            Pablo Fernandez <br />
+            Isabella Santos <br />
+            Yuki Tanaka <br />
+            Elise Dupont <br />
+            Ahmed Ali
+        </p>
+        <a href="#" class="deleteButton">
+            <span>Slet</span>
+        </a>
+        <a href="#" class="editButton">
+            <span>Rediger</span>
+        </a>
+        <a href="#" class="saveButton">
+            <span>Gem</span>
+        </a>
     </div>
 </div>
