--- a/AdminSite/Pages/Shared/_Layout.cshtml
+++ b/AdminSite/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                 <li><a asp-page="/Index">Hjem</a></li>
                 <li><a asp-page="/AboutUs">Om SFFP</a></li>
                 <li><a asp-page="/AdminPanel">Admin Panel</a></li>
+                <li><a asp-page="/AdminPanel">Staff Panel</a></li>
                 <li class="dropdown">
                     <a href="javascript:void(0)" class="dropbtn">Information</a>
                     <div class="dropdown-content">
